# evalap

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyproject.pre-commit.toml  .terraformignore  ACCEPTANCE_TESTING.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  README.md  Readme.md  compose.dev.yml  compose.yml  justfile  mcp.json  pyproject.toml  pytest.ini  renovate.json5  supervisord.conf  supervisord.dev.conf
.github/: dependabot.yml  pull_request_template.md  renovate.json5
.github/workflows/: build.yml  build_and_deploy.yml  infrastructure-production.yml  infrastructure-staging.yml  infrastructure-validate.yml  pr_checks.yml
.moon/: toolchain.yml  workspace.yml
.specify/memory/: 001-scaleway-pulumi-infra-dependencies.md  constitution.md  latest-dependency-check.md
.windsurf/rules/: specify-rules.md
api/: alembic.ini  base.py  config.py  crud.py  db.py  endpoints.py  main.py  models.py  schemas.py  security.py  utils.py
api/clients/: __init__.py  llm.py
api/mcp/: __init__.py  main.py
api/metrics/: __init__.py  generation_ops_metric.py  generation_time_metric.py  judge_completude.py  judge_complexity.py  judge_exactness.py  judge_notator.py  judge_rambling.py  judge_relevant.py  metrics.py  output_length.py  prompt_length.py  qcm.py
api/runners/: __init__.py  dispatcher.py  main.py  tasks.py
api/tests/: conftest.py  test_api.py
apps/api/: pyproject.toml
apps/api/src/evalap/api/: endpoints.py  main.py  security.py
apps/docs/: README.md  sidebars.js
apps/runners/: pyproject.toml
apps/runners/src/evalap/runners/: dispatcher.py  main.py  tasks.py
apps/ui/: pyproject.toml
apps/ui/src/evalap/ui/: schemas.py  template_manager.py
apps/ui/src/evalap/ui/templates/: experiment_set.sh.j2  experiment_set_cv.sh.j2
apps/ui/src/evalap/ui/views/: core_experiments.py  experiments_set.py  home.py  leaderboard.py
archives/experiment_set_10/: index.md
archives/experiment_set_101/: index.md
archives/experiment_set_106/: index.md
archives/experiment_set_107/: index.md
archives/experiment_set_108/: index.md
archives/experiment_set_109/: index.md
archives/experiment_set_11/: index.md
archives/experiment_set_111/: index.md
archives/experiment_set_112/: index.md
archives/experiment_set_113/: index.md
archives/experiment_set_114/: index.md
archives/experiment_set_115/: index.md
archives/experiment_set_116/: index.md
archives/experiment_set_117/: index.md
archives/experiment_set_12/: index.md
archives/experiment_set_16/: index.md
archives/experiment_set_18/: index.md
archives/experiment_set_21/: index.md
archives/experiment_set_22/: index.md
archives/experiment_set_23/: index.md
archives/experiment_set_24/: index.md
archives/experiment_set_25/: index.md
archives/experiment_set_26/: index.md
archives/experiment_set_29/: index.md
archives/experiment_set_32/: index.md
archives/experiment_set_33/: index.md
archives/experiment_set_40/: index.md
archives/experiment_set_42/: index.md
archives/experiment_set_44/: index.md
archives/experiment_set_47/: index.md
archives/experiment_set_48/: index.md
config/: metrics.py
contrib/: docker-compose.dev.yml
docs/: ACCEPTANCE_TESTING.md  README.md  TESTING_BRANCHES.md  docusaurus.config.js  links.md  mcp.md  ocr.md  package-lock.json  package.json  sidebars.js
docs/docs/: index.md
eg1/: utils.py  utils_eco.py
evalap/: logger.py  utils.py  utils_eco.py
infra/: .gitignore  .terraform.lock.hcl  Pulumi.dev.yaml  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  main.tf  project.py  providers.tf  variables.tf
notebooks/: RAG-adhoc.ipynb  RAG-hybrid.ipynb  RAG_evaluation.ipynb  Readme.md  albert-evals-RAG.ipynb  albert-evals-raw.ipynb  boostrap_datasets.ipynb  create_legalbenchrag_dataset.ipynb  create_marker_dataset.ipynb  deccp.ipynb  r&d_change_rag_prompt.ipynb  r&d_evalap_is_your_own_ia_system.ipynb  rd_change_rag_prompt.ipynb  run_albert_evals.ipynb  run_an_example_of_toolings_usage.ipynb  run_compliance.ipynb  run_dataset_experiences_demo.ipynb  run_evals_compliance.ipynb  run_evals_for_your_own_IA_system.ipynb  run_evals_models_raw.ipynb  run_evals_models_with_rag.ipynb  run_evals_ocr_marker.ipynb  run_evals_with_crossvalidation.ipynb  run_experiences_demo.ipynb  run_experiments_demo.ipynb  run_grid_demo.ipynb  run_grid_raglimit_demo.ipynb  run_grid_repeat_demo.ipynb  run_judge_adhoc.ipynb  run_ocr.ipynb  run_set_raglimit_demo.ipynb  run_set_ragmetrics_demo.ipynb  run_set_repeat_demo.ipynb  run_toolings.ipynb  run_your_own_llm_as_a_judge_metric.ipynb
ops/: docker-compose.dev.yml  supervisord.conf
scripts/: archive_evalap.py  chat_completion.sh  chat_completion_cortex.sh  drop_database.py  drop_table.py  get_experiment.py  list_indexes.sh  list_model.sh  pray.sh  publish_to_hf.py  reset_experiment_status.py  run_evalap.sh  run_with_reload.py  start_uvicorn.sh
tests/: conftest.py  mock.py  test_api.py  test_utils_eco.py
wiki/: ocr.md  tools.md
(+1435 files in other folders)
