[project]
name = "eg1"
version = "0.3.0"
description = "Albert Evaluations"
authors = [{ name = "Etalab", email = "etalab@modernisation.gouv.fr" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["IA", "LLM", "evaluation"]
dependencies = [
    # API
    "fastapi==0.115.2",
    "SQLAlchemy==2.0.35",
    "sqlalchemy-utils==0.41.2",
    "alembic==1.13.3",
    "uvicorn==0.32.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.10",
    "pandas==2.2.3",
    "pyzmq==26.2.0",
    "jinja2==3.1.4",
    "pydantic==2.10.1",
    "inflection==0.5.1",
    "docopt-ng==0.9.0",
    "deepeval==2.5.2",
    "ragas==0.2.14",
    # Front
    "streamlit==1.40.1",
    "plotly==5.22.0"
]


[project.urls]
Homepage = "https://eg1.etalab.gouv.fr"
Source = "https://github.com/etalab-ia/eg1"
Tracker = "https://github.com/etalab-ia/eg1/issues"
Documentation = "https://github.com/etalab-ia/eg1"

[project.scripts]
eg1_generate_answers = "eg1.scripts.run_answers.run_answers:main"
eg1_run_expe = "eg1.scripts.run_expe.run_expe:main"

# Packaging

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["eg1*"]}}
include-package-data = true

[tool.setuptools.package-data]
eg1_config = ["config/*"]

[tool.pdm]
distribution = false

# Tests

[project.optional-dependencies]
test = ["pytest==8.3.3", 
        "pytest-asyncio==0.24.0",
        "pre-commit==3.6.0"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Linter

[tool.ruff]
line-length = 100
exclude = ["alembic/versions/"]

[tool.ruff.lint.isort]
known-third-party = ["alembic"]
known-first-party = ["api", "config", "tests", "ui"]


