[project]
name = "evalap-root"
version = "0.1.0"
description = "Evaluations API and Platform Monorepo"
requires-python = ">=3.12"
dependencies = [
    "evalap-core",
    "evalap-api",
    "evalap-ui",
    "evalap-runners"
]

[tool.uv.sources]
evalap-core = { workspace = true }
evalap-api = { workspace = true }
evalap-ui = { workspace = true }
evalap-runners = { workspace = true }

[tool.uv.workspace]
members = ["apps/api", "apps/ui", "apps/runners", "packages/core"]
