[project]
name = "evalap-api"
version = "0.1.0"
description = "EvalAP FastAPI Application"
requires-python = ">=3.12"
dependencies = [
    "evalap-core",
    "fastapi~=0.115.2",
    "uvicorn~=0.32.0",
    "requests~=2.32.3",
    # "supervisor~=4.2.5", # Only for runners?
]

[tool.uv.sources]
evalap-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalap"]
