[project]
name = "evalap-ui"
version = "0.1.0"
description = "EvalAP Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "evalap-core",
    "streamlit~=1.40.1",
    "plotly~=5.22.0",
    "jinja2~=3.1.4",
    "requests~=2.32.3", # Likely needed
    "pandas~=2.2.3",
]

[tool.uv.sources]
evalap-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalap"]
